# RayMax

./: CMakeLists.txt  README.md  main.cpp
include/: IDrawable.h  IUpdatable.h  RayMax.h
src/: RayMax.cpp
